<resources>
    <string name="app_name">St.Mark Kidney Center</string>
    <string name="connection_error">حدث خطأ فى الاتصال الانترنت</string>
    <string name="firebase_services">services</string>
    <string name="firebase_serviceDetails">serviceDetails</string>
    <string name="firebase_events">events</string>
    <string name="firebase_eventDetails">eventDetails</string>
    <string name="firebase_times">times</string>
    <string name="cancel">إلغاء</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="blood_transfusion">Blood Transfusion</string>
    <string name="personal_data">Personal Data</string>
    <string name="medical_history">Medical History</string>
    <string name="past_diseases_history">Past Diseases History</string>
    <string name="previous_dialysis">Previous Dialysis</string>
    <string name="treatment">Treatment</string>
    <string name="vascular_access_history">Vascular Access History</string>
    <string name="viral_state">Viral State</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_blood_transfusion">Blood Transfusion</string>
    <string name="title_activity_personal_data">Personal Data</string>
    <string name="title_activity_medical_history">Medical History</string>
    <string name="title_activity_past_diseases_history">Past Diseases History</string>
    <string name="title_activity_previous_dialysis">Previous Dialysis</string>
    <string name="title_activity_treatment">Treatment</string>
    <string name="title_activity_vascular_access_history">Vascular Access History</string>
    <string name="title_activity_viral_state">Viral State</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="blood_product">Blood product</string>
    <string name="cause_of_transfusion">Cause Of Transfusion</string>
    <string name="complications">Complications</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="title_activity_treatment_details">Current Treatment</string>
</resources>
