<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.samir.andrew.stmarkkidneycenter.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnMainActivityPersonalData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/personal_data" />

        <Button
            android:id="@+id/btnMainActivityBloodTransfusion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/blood_transfusion" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnMainActivityMedicalHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/medical_history" />

        <Button
            android:id="@+id/btnMainActivityPastDiseasesHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/past_diseases_history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnMainActivityPreviousDialysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/previous_dialysis" />

        <Button
            android:id="@+id/btnMainActivityTreatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/treatment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnMainActivityVascularAccessHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/vascular_access_history" />

        <Button
                android:id="@+id/btnMainActivityViralState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:layout_weight="1"
            android:lines="2"
            android:text="@string/viral_state" />
    </LinearLayout>

</LinearLayout>
