<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_7sdp"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <TextView
        android:id="@+id/tvRvItemBloodTransfusionDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textStyle="italic|bold"
        tools:text="5-7-2004" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:text="@string/blood_product"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRvItemBloodTransfusionBloodProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            tools:text="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:text="@string/cause_of_transfusion"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRvItemBloodTransfusionCauseOfTransfusion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            tools:text="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:text="@string/complications"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRvItemBloodTransfusionComplications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            tools:text="@string/name" />
    </LinearLayout>
</LinearLayout>